kubernetes/kyverno/tests/pass/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restricted-pass
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.32
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.32
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.32
---
apiVersion: v1
kind: Namespace
metadata:
  name: baseline-pass
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.32
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: v1.32
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: v1.32
---
apiVersion: v1
kind: Namespace
metadata:
  name: privileged-pass
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.32
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.32
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.32
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
